--- a/package.json
+++ b/package.json
@@ -36,9 +36,17 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.(j|t)s?(x)": [
+      "yarn lint:fix",
+      "yarn format:fix",
+      "git add"
+    ]
   }
 }
